# nanogpt-rusted

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  model.rs
