[package]
name = "nanogpt-rusted"
version = "0.1.0"
edition = "2021"
authors = ["Timothy Bogdala <tdb@animal-machine.com>"]
description = "An implementation of Karpathy's nanogpt using Rust and Candle."

[dependencies]
anyhow = "1.0.82"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.5.0" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.5.0" }
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
env_logger = "0.11.3"
log = "0.4.21"
rand = "0.8.5"
ratatui = "0.26.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokenizers = { version = "0.15.2", features = ["http"] }

[features]
default = []
cuda = [
    "candle-core/cuda", 
    "candle-nn/cuda",
    ]
cudnn = [    
    "candle-core/cudnn", 
]
metal = [
    "candle-core/metal",
    "candle-nn/metal" ,
]
